同步于: 10月1日4时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -10,8 +10,8 @@
 #### [ 中共党内危机四伏？这件事恐引爆另一波斗争](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658323.md)
 #### [ 大阵仗！习近平3天打9“虎” 目标瞄准慕后“老老虎”？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658299.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
-#### [ 【中国观察】中共极端防疫还能走多远？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13835529.md)
 #### [ 屡赴境外赌博 内蒙古厅官涉案30亿获死刑 立即执行(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017778.md)
+#### [ 【中国观察】中共极端防疫还能走多远？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13835529.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ 中共20大前提“历史自信” 专家：维持谎言(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017821.md)
 #### [ 【一线采访】郑州大学生群起抗议封校 遭打压](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13835520.md)
@@ -47,7 +47,7 @@
 #### [ 太子党放风？习目前可能很危险](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/657726.md)
 #### [ 天津卫建委主任直播 “津门女侠”一骂成名](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103540455.md)
 #### [ “六四纪念馆”明年在纽约开馆 获批为教育文化机构](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13835932.md)
+#### [ 王友群：江泽民的谎言与残暴再次大曝光](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13834808.md)
 #### [ 知名学者：明年中国可能在这一点上出问题](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658086.md)
+#### [ 陆博主曝光食品“黑科技”、主动销号的背后](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13836018.md)
 #### [ 人民的敌人？中共公安20大前已抓捕140多万人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658317.md)
-#### [ 中国新闻快报：中共辱民防疫 广州运猪车拉人隔离 河南锁链下做核酸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103540322.md)
-#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
