同步于: 10月1日6时2分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -19,8 +19,8 @@
 #### [ 这是二十大常委名单？被发现缺了一个人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658170.md)
 #### [ 前中共江苏省委副书记张敬华被起诉(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017861.md)
 #### [ 习近平确认11月再出访 引发关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103540357.md)
-#### [ 北京喊隔离不得从外锁门 民间围轰 网管急删帖(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017913.md)
 #### [ 孙力军团伙“第七虎” 刘彦平被起诉(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017791.md)
+#### [ 北京喊隔离不得从外锁门 民间围轰 网管急删帖(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017913.md)
 #### [ 上访无门？中共二十大前国家信访局用铁皮围封(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017863.md)
 #### [ 二十大后中国局势何去何从 专家这么看](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13834792.md)
 #### [ 传郑州大学生呼吁重拾尊严 聚集抗议喊“解封”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017896.md)
@@ -49,5 +49,5 @@
 #### [ 太子党放风？习目前可能很危险](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/657726.md)
 #### [ 【中国观察】二十大前的红二代裂痕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13836118.md)
 #### [ 中国新闻快报：中共辱民防疫 广州运猪车拉人隔离 河南锁链下做核酸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103540322.md)
+#### [ 陆博主曝光食品“黑科技”、主动销号的背后](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13836018.md)
 #### [ “六四纪念馆”明年在纽约开馆 获批为教育文化机构](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13835932.md)
-#### [ 王友群：江泽民的谎言与残暴再次大曝光](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13834808.md)
